# Visualisateur_de_Netlist

./: README.md  WhatToDo.txt  readme.txt
Screenshots/: Description.txt  txt.txt
src/: Box.cpp  Box.h  CMakeLists.txt  Cell.cpp  Cell.h  CellViewer.cpp  CellViewer.h  CellWidget.cpp  CellWidget.h  CellsLib.cpp  CellsLib.h  CellsModel.cpp  CellsModel.h  Indentation.cpp  Indentation.h  Instance.cpp  Instance.h  InstancesModel.cpp  InstancesModel.h  InstancesWidget.cpp  InstancesWidget.h  Line.cpp  Line.h  Main.cpp  Net.cpp  Net.h  Node.cpp  Node.h  OpenAbout.cpp  OpenAbout.h  OpenCellDialog.cpp  OpenCellDialog.h  Point.cpp  Point.h  SaveCellDialog.cpp  SaveCellDialog.h  Shape.cpp  Shape.h  Symbol.cpp  Symbol.h  (+4 more)
work/cells/: TransistorN.xml  TransistorP.xml  and2.xml  fulladder.xml  gnd.xml  halfadder.xml  inverter.xml  or2.xml  vdd.xml  xor2.xml
